--- a/frontmatter/abbreviations-acronyms.tex
+++ b/frontmatter/abbreviations-acronyms.tex
@@ -1,6 +1,7 @@
 \chapter*{Abbreviations and acronyms}
+\addcontentsline{toc}{chapter}{Abbreviations and acronyms}
 \begin{acronym}
 % list down all your acros here
-\acro{FSTT}{Faculty of Science and Technology of Tangier}
+\acro{ABC}{Acronym for ABC}
+\acro{XYZ}{Acronym for XYZ}
 \end{acronym}
-\addcontentsline{toc}{chapter}{Abbreviations and acronyms}
