--- a/frontmatter/general-introduction.tex
+++ b/frontmatter/general-introduction.tex
@@ -1,5 +1,7 @@
 \pagenumbering{arabic}
 \pagestyle{mainmatter}
 \chapter*{General Introduction}
-\lipsum[1-4]
 \addcontentsline{toc}{chapter}{General Introduction}
+\noindent \lettrine[lines=2]{T}{his} is a dummy text for the general introduction chapter. It serves as a placeholder to demonstrate the structure of the document. The general introduction typically provides an overview of the project, its objectives, and the context in which it is situated. It sets the stage for the detailed discussions that follow in subsequent chapters.
+
+\lipsum[1-3]
