--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -1,21 +1,21 @@
-\begin{titlepage}
-    \newgeometry{
-        top=1cm,
-        bottom=1cm,
-        left=2cm,
-        right=2cm,
+\newgeometry{
+    top=1cm,
+    bottom=1cm,
+    left=2cm,
+    right=2cm,
     }
-    \centering
+
+\begin{center}
     
     % --- Top Logos ---
     \begin{minipage}[t]{0.45\textwidth}
         \centering
-        \includegraphics[height=2.5cm,width=6cm]{example-image-a} % Logo of the university
+        \includegraphics[height=0.32\linewidth]{assets/fstt.png} % Logo of the university
     \end{minipage}%
     \hfill
     \begin{minipage}[t]{0.45\textwidth}
         \centering
-        \includegraphics[height=2.5cm,width=6cm]{example-image-b} % Logo of the institution
+        \includegraphics[height=0.32\linewidth]{assets/uae.png} % Logo of the institution
     \end{minipage}
 
     \vspace{0.1cm}
@@ -29,7 +29,7 @@
 
     \vspace{0.1cm}
     
-    {\large\itshape Presented to obtain the degree of:\par}
+    {\large\itshape{Presented to obtain the degree of:}\/\par}
     \vspace{0.1cm}
     {\Large\bfseries [The degree]\\
     \vspace{0.1cm}
@@ -65,7 +65,7 @@
 
     % --- Author Information ---
     \rule{0.5\textwidth}{1pt}\\[0.1cm]
-    {\large\itshape Presented by:\par}
+    {\large\itshape{Presented by:}\/\par}
     \vspace{0.1cm}
     {\Large\bfseries [Full Name]\par}
     \rule{0.5\textwidth}{1pt}
@@ -73,7 +73,7 @@
     \vspace{0.7cm}
     
     % --- Jury Information ---
-    {\large\itshape Defended on DD/MM/YYYY before the jury:\par}
+    {\large\itshape{Defended on DD/MM/YYYY before the jury:}\/\par}
     \vspace{0.2cm}
     \noindent
     \begin{tabularx}{\textwidth}{>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}X>{\raggedleft\arraybackslash}l}
@@ -91,17 +91,18 @@
     \vspace{1cm}
 
     % --- Internship Company ---
-    {\large\itshape Internship completed at:\par}
+    {\large\itshape{Internship completed at:}\/\par}
     \vspace{0.2cm}
-    \includegraphics[height=2.5cm,width=6cm]{example-image-c} % Logo of the company
+    \includegraphics[height=2cm,width=6cm]{example-image-c} % Logo of the company
 
     \vfill
 
     % --- Academic Year ---
     \begin{center}
         \rule{0.5\textwidth}{1pt}\\[0.1cm]
-        {\large\bfseries\itshape Academic Year: 20YY/20YY\par}
+        {\large\bfseries\itshape{Academic Year: YYYY/YYYY}\/\par}
     \end{center}
     
-    \restoregeometry
-\end{titlepage}
+\end{center}
+
+\restoregeometry{}
