--- a/config/layout.tex
+++ b/config/layout.tex
@@ -10,16 +10,18 @@
 }
 
 % Headers and footers
+
+\renewcommand{\chaptermark}[1]{\markboth{Chapter \thechapter: #1}{}}
 \fancypagestyle{mainmatter}{
     \fancyhf{} % Clear all header and footer fields
-    \fancyhead[L]{\leftmark} % Chapter number and name in left header
-    \fancyfoot[R]{\bfseries\thepage}   % Page number in right footer
-    \renewcommand{\headrulewidth}{0.1mm} % Header rule for all pages except first chapter page
+    \fancyhead[L]{\large\textbf{\leftmark}} % Chapter name in left header
+    \fancyfoot[R]{\bfseries Page | \thepage}   % Page number in right footer
+    \renewcommand{\headrulewidth}{0.2mm} % Header rule for all pages except first chapter page
 }
 
 \fancypagestyle{chapter-first-page}{
     \fancyhf{} % Clear header/footer
-    \fancyfoot[R]{\bfseries\thepage}
+    \fancyfoot[R]{\bfseries Page | \thepage}
     \renewcommand{\headrulewidth}{0mm} % No header rule for first page of chapter
 }
 
@@ -27,11 +29,5 @@
 \let\old@chapter\@chapter%
 \def\@chapter[#1]#2{\old@chapter[#1]{#2}\thispagestyle{chapter-first-page}}
 \let\old@schapter\@schapter%
-\def\@schapter#1{\old@schapter{#1}\thispagestyle{chapter-first-page}}
+\def\@schapter#1{\old@schapter{#1}\markboth{#1}{#1}\thispagestyle{chapter-first-page}}
 \makeatother
-
-\fancypagestyle{plain}{
-    \fancyhf{} % Clear all header/footer fields
-    \fancyfoot[R]{\thepage} % Page number at right footer
-    \renewcommand{\headrulewidth}{0pt} % No header rule
-}
